fixed an issue with image being off center

--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,6 @@ img {
 }
 
 .modal-gallery {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -79,9 +76,11 @@ img {
 }
 
 .modal-image-container {
-  width: 80%;
-  max-width: 550px;
-  margin: 3.5em auto;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-arrows {
